# Streamline

./: .gitattributes  .gitignore  3rd-party-licenses.md  CMakeLists.txt  README.md  VkLayer_streamline.json  build.bat  build_all.bat  changelog.txt  license.txt  package.bat  premake.lua  project.xml  release.txt  setup.bat
_artifacts/shaders/: copy_cs.h  copy_spv.h  copy_to_buffer_spv.h  mvec_cs.h  mvec_spv.h  nrd_pack_cs.h  nrd_pack_spv.h  nrd_prep_cs.h  nrd_prep_spv.h
docs/: APIChangesAndImprovements.md  Debugging - JSON Configs (Plugin Configs).md  Debugging - NRD.md  Debugging - SL ImGUI (Realtime Data Inspection).md  Debugging.md  ProgrammingGuide.md  ProgrammingGuideDLSS.md  ProgrammingGuideDLSS_G.md  ProgrammingGuideDLSS_RR.md  ProgrammingGuideDeepDVC.md  ProgrammingGuideDirectSR.md  ProgrammingGuideLatency.md  ProgrammingGuideManualHooking.md  ProgrammingGuideNIS.md  ProgrammingGuideNRD.md  ProgrammingGuidePCL.md  ProgrammingGuideReflex.md
include/: sl.h  sl_appidentity.h  sl_consts.h  sl_core_api.h  sl_core_types.h  sl_deepdvc.h  sl_device_wrappers.h  sl_directsr.h  sl_dlss.h  sl_dlss_d.h  sl_dlss_g.h  sl_helpers.h  sl_helpers_vk.h  sl_hooks.h  sl_latency.h  sl_matrix_helpers.h  sl_nis.h  sl_nrd.h  sl_nvperf.h  sl_pcl.h  sl_reflex.h  sl_result.h  sl_security.h  sl_struct.h  sl_template.h  sl_version.h
lib/x64/: sl.interposer.lib
scripts/: _manifest.lua  _preload.lua  cuda.lua  cuda_nvcc.lua  cuda_vstudio.lua  ngx_driver_onscreenindicator.reg  ngx_driver_onscreenindicator_off.reg  sl.cmake  sl.common.json  sl.imgui.json  sl.interposer.json  sl.reflex.json  streamline_logging_disable.reg  streamline_logging_enable.reg
shaders/: NIS_Scaler_cs.h  NIS_Scaler_spv.h  NIS_Sharpen_cs.h  NIS_Sharpen_spv.h  copy.hlsl  copy_to_buffer.hlsl  copy_to_buffer_cs.h  copy_to_buffer_spv.h  font.hlsl  font_cs.h  font_spv.h  mvec.hlsl  mvec_cs.h  mvec_spv.h  nrd_pack.hlsl  nrd_pack_cs.h  nrd_pack_spv.h  nrd_prep.hlsl  nrd_prep_cs.h  nrd_prep_spv.h  vulkan_clear_image_view.comp  vulkan_clear_image_view_spirv.h
source/core/ngx/: ngxParameters.cpp  ngxParameters.h
source/core/sl.api/: internal.h  internalDataSharing.h  plugin-manager.h  sl.cpp
source/core/sl.exception/: exception.cpp  exception.h
source/core/sl.extra/: extra.cpp  extra.h
source/core/sl.file/: file.h
source/core/sl.interposer/: exports.def  hook.cpp  hook.h  interposer.aps  resource.h  versions.h
source/core/sl.interposer/d3d11/: d3d11.cpp
source/core/sl.interposer/d3d12/: d3d12.cpp  d3d12.h  d3d12CommandList.cpp  d3d12CommandList.h  d3d12CommandQueue.cpp  d3d12CommandQueue.h  d3d12Device.cpp  d3d12Device.h
source/core/sl.interposer/dxgi/: dxgi.cpp  dxgiFactory.cpp  dxgiFactory.h  dxgiSwapchain.cpp  dxgiSwapchain.h
source/core/sl.interposer/vulkan/: layer.cpp  layer.h  vulkannv.h  wrapper.cpp
source/core/sl.log/: log.cpp  log.h
source/core/sl.ota/: ota.cpp  ota.h
source/core/sl.param/: parameters.cpp  parameters.h
source/core/sl.plugin/: plugin.cpp  plugin.h
source/core/sl.plugin-manager/: ota.cpp  ota.h  pluginManager.cpp  pluginManager.h  pluginManagerEntry.cpp
source/core/sl.security/: secureLoadLibrary.cpp  secureLoadLibrary.h
source/core/sl.thread/: thread.h
source/plugins/sl.common/: common.json  commonDRSInterface.h  commonEntry.cpp  commonInterface.cpp  commonInterface.h  drs.cpp  drs.h  resource.h  versions.h
source/plugins/sl.deepdvc/: deepDVCEntry.cpp  deepdvc.json  deepdvc_hooks.json  resource.h  versions.h
source/plugins/sl.directsr/: directsr.json  directsrEntry.cpp  directsr_guid.cpp  resource.h  versions.h
source/plugins/sl.dlss/: dlss.json  dlssEntry.cpp  dlss_shared.h  resource.h
source/plugins/sl.dlss_d/: dlss_d.json  dlss_dEntry.cpp  resource.h
source/plugins/sl.imgui/: DroidSans-Mono.h  imgui.h  imgui.json  imguiEntry.cpp  imguiTypes.h  imgui_impl_dx12.cpp  imgui_impl_dx12.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_impl_win32.cpp  imgui_impl_win32.h  input.h  resource.h  types.h  versions.h
source/plugins/sl.latency/: latency.h  latencyEntry.cpp  latencystats.h  resource.h  versions.h
source/plugins/sl.nis/: nis.json  nisEntry.cpp  nis_compile.py  plugin.rc  resource.h  versions.h
source/plugins/sl.nis/NIS/: NIS_Config.h  NIS_Main.hlsl  NIS_Scaler.h
source/plugins/sl.nrd/: nrd.json  nrdEntry.cpp  resource.h  versions.h
source/plugins/sl.pcl/: pcl.h  pcl.json  pclEntry.cpp  pclImpl.h  pclstats.h  plugin.rc  resource.h  versions.h
source/plugins/sl.reflex/: latencystats.h  pclstats.h  reflex.h  reflex.json  reflexEntry.cpp  reflex_shared.h  resource.h  versions.h
source/plugins/sl.template/: plugin.aps  plugin.rc  resource.h  template.json  templateEntry.cpp  versions.h
source/shared/: sharedVersions.h
tools/: bin2cheader.ps1  build_shader.bat  gitVersion.bat
tools/packman/: config.packman.xml  packman
tools/packman/bootstrap/: configure.bat
tools/premake5/: README.packman.md
utils/reflex/: ReflexTestCleanup.bat  ReflexTestSetup.bat  capturePclEtw.bat
